[package]
name = "volu"
version = "0.0.1"
authors = ["Arian Mirahmadi <mirarianmir@gmail.com>"]
edition = "2021"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
indicatif = "0.17.0-rc.6"