[package]
name = "volu"
version = "0.2.0"
authors = ["Arian Mirahmadi <mirarianmir@gmail.com>"]
edition = "2021"
description = "Prints the size of the given directory, featuring the largest dirs"
keywords = ["cli", "size", "du", "usage", "directory"]
categories = ["command-line-interface"]
license = "MIT"
repository = "https://github.com/thearian/volu"
readme = "README.md"
exclude = ["bin/*", "release/*"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
clap = { version = "3.1.6", features = ["derive"] }
indicatif = "0.17.0-rc.6"
console = "0.15.0"
