[package]
name = "volu"
version = "0.2.1"
authors = ["Arian Mirahmadi <mirarianmir@gmail.com>"]
edition = "2021"
description = "Prints the size of the given directory, featuring the largest dirs"
keywords = ["cli", "size", "du", "usage", "directory"]
categories = ["command-line-interface"]
license = "MIT"
repository = "https://github.com/thearian/volu"
readme = "README.md"
exclude = ["bin/*", "release/*"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

[dependencies]
